--- a/css/cbstyles.css
+++ b/css/cbstyles.css
@@ -8,12 +8,76 @@ footer {
     padding: 20px 0;
 }
 
-.jumbotron {
-    background-color: black;
+.main {
+    background-color:black;
+}
+
+.second {
+    background-color: darkred;
+}
+
+.navi {
+    background-image: linear-gradient( dimgray,white,lightgray);
+}
+
+.jumbotron{
+    background-color:black;
+    background-image:url("images/homeimage1fullsize.png");
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+.jumbotron .container {
+    max-width: 100vw;
+}
+
+#bookButton {
+    position: absolute;
+    z-index: 100;
+    left: 5;
+    bottom: 5;
+}
+
+#quoteButton {
+    position: absolute;
+    z-index: 100;
+    left: 50;
+    bottom: 5;
 }
 
 .row-content {
-    padding: 50px 0;
+    padding: 2rem 0;
     border-bottom: 1px ridge;
     min-height: 200px;
+}
+
+.services .card-header {
+    box-shadow: none;
+}
+
+.center {
+    text-align: center;
+    width: 100%;
+}
+
+.frequecy {
+    width: 29%;
+}
+
+.fader {
+    width: 29%;
+}
+
+.carousel .card {
+    min-height: 38vw;
+}
+
+.map iframe {
+    width: 100%; 
+    height: 90%;
+}
+
+.social i {
+    text-color: white;
 }
